docs: add list all openings doc docs: add update opening doc
