# handler/listOpenings.go
@@ -16,7 +16,7 @@ import (
 // @Produce json
 // @Success 200 {object} ListOpeningsResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /opening [get]
+// @Router /openings [get]
 func ListOpeningHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 	if err := db.Find(&openings).Error; err != nil {
